# yesman-claude

./: .claudeignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BACKLOG.md  CLAUDE.md  CLAUDE.md.pre_cache_removal_backup  DEFINITION.md  FEATURES-v2.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  ISSUE.md  ISSUES.md  LINT_ERRORS_REPORT.md  LINT_FIX_REPORT.md  LINT_FIX_SUMMARY.md  METRICS_DASHBOARD.json  Makefile  Makefile.build.mk  Makefile.deps.mk  Makefile.dev.mk  Makefile.docker.mk  Makefile.env.mk  Makefile.lint.mk  Makefile.ops.mk  Makefile.quality.mk  Makefile.test.mk  Makefile.tools.mk  QUALITY_GATES_COMPREHENSIVE.md  README.md  README_LINT_SETUP.md  SAFE_CLEANUP_WORKFLOW.md  SECURITY_REVIEW.md  TASK_COMPLETION_SUMMARY.md  TECH_STACK.md  TEST.md  TEST_ANALYSIS_REPORT.md  TODO-v2.md  TODO-v3.md  TODO.md  (+86 more)
.backups/ann003/: agent_pool.py  ai.py  async_base_command.py  async_logger.py  async_logger_refactored.py  automate.py  base_command.py  batch_processor.py  batch_processor_refactored.py  branch_test_manager.py  browse.py  browse_async.py  claude_monitor.py  cleanup.py  conflict_prediction.py  dashboard.py  enter.py  error_handling.py  interfaces.py  keyboard_navigation.py  logs.py  ls.py  mock_data.py  mock_factories.py  multi_agent_backup.py  optimizations.py  performance_optimizer.py  renderer_factory.py  semantic_analysis.py  setup.py  show.py  status.py  status_async.py  status_refactored.py  task_analyzer.py  task_runner.py  teardown.py  test_base_batch_processor.py  test_framework.py  tui_dashboard.py  (+2 more)
.backups/makefile_restructure_20250724_165143/: Makefile.build.mk  Makefile.deps.mk  Makefile.dev.mk  Makefile.docker.mk  Makefile.quality.mk  Makefile.test.mk  Makefile.tools.mk
.claude/: settings.json  settings.local.json
.github/workflows/: tests.yml
api/: __init__.py  background_tasks.py  main.py  models.py  requirements.txt  shared.py
api-docs/: README.md
api/middleware/: __init__.py  error_handler.py
api/routers/: __init__.py  config.py  controllers.py  dashboard.py  logs.py  sessions.py  sessions_improved.py  websocket.py  websocket_router.py
api/tests/: __init__.py  test_background_tasks.py  test_batch_processor.py  test_websocket.py
api/utils/: __init__.py  batch_processor.py  batch_processor_refactored.py
commands/: __init__.py  ai.py  automate.py  browse.py  browse_async.py  cleanup.py  config.py  controller.py  dashboard.py  down.py  enter.py  logs.py  ls.py  ls_improved.py  multi_agent.py  multi_agent_backup.py  multi_agent_main.py  session.py  setup.py  setup_improved.py  show.py  status.py  status_async.py  status_refactored.py  task_runner.py  teardown.py  up.py  validate.py
commands/multi_agent/: __init__.py  agent_pool.py  batch_operations.py  cli.py  (+6 more)
config/: default.yaml  development.yaml  production.yaml  test.yaml
debug/: debug_content.py  debug_controller.py  debug_tmux.py
docs/: INDEX.md  INTEGRATION_TEST.md  MONITORING_DASHBOARD_GUIDE.md  README.md  api-reference.md  configuration.md  developer-guide.md  integration-test-backup.md  mock_centralization_expansion_plan.md  mock_migration_guide.md  security-performance-integration.md  selection_patterns.md  test_naming_standards.md  user-guide.md
examples/: README.md  branch_testing_demo.py  metrics_verification_demo.py  mock_centralization_demo.py  recovery_system_demo.py  simple_metrics_demo.py
langChain/: README.md  context_management.md  langchain_claude_integration.py  mcp_test_results.json  mcp_testing_guide.md  test_mcp_integration.py  workflow_examples.py
libs/: controller.py  dashboard.py  session_helpers.py  task_runner.py  tmux.py  tmux_manager.py  utils.py  validation.py  yesman_config.py
patterns/: README.md
performance_data/: baseline_1753776479.json  baseline_1753776519.json  baseline_1753855727.json  baseline_report.json
scripts/: __init__.py  check_tauri_integrity.sh  commit_helper.sh  deployment_pipeline.py  deployment_validator.py  detect_unittest_usage.py  documentation_generator.py  establish_baseline.py  fix_ann003.py  fix_ann003_manual.py  performance_baseline.py  quality_gates_checker.py  quality_gates_performance.py  quality_gates_unified.py  run_quality_gates.py  security_validation.py  security_validation_enhanced.py  test_async_integration.py  test_naming_validator.py  unittest_to_pytest_migrator.py  validate-lint-config.py  validate_lint_config.py
sessions/: README.md  _template.yaml
specs/: README.md
tasks/: NEXT_STEPS_RECOMMENDATIONS.md  README.md  TODO.md  qa-result.md
tauri-dashboard/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
tauri-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
tauri-dashboard/src-tauri/src/: cache.rs  events.rs  main.rs  notifications.rs  python_bridge.rs
templates/: web_dashboard.html
test-integration/: README.md  app.py  run_tests.sh
tests/: .test_skip  README.md  __init__.py  async_conversion_test_suite.py  conftest.py  refactoring_progress.md  test_advanced_cache_strategies.py  test_agent_monitor.py  test_agent_pool.py  test_async_integration.py  test_auto_response.py  test_branch_info_protocol.py  test_branch_manager.py  test_branch_testing.py  test_branch_testing_simple.py  test_cache_visualization.py  test_claude_restart.py  test_code_review_engine.py  test_collaboration_engine.py  test_config_cache.py  test_config_management.py  test_config_modes.py  test_conflict_prediction.py  test_conflict_prevention.py  test_conflict_resolution.py  test_content_collector.py  test_controller.py  test_dashboard_cache_integration.py  test_dashboard_launcher.py  test_dependency_propagation.py  test_di_container.py  test_dynamic_redistribution.py  test_error_handling.py  test_full_automation.py  test_integration.py  test_metrics_verification.py  test_mode_simple.py  test_monitoring_dashboard.py  test_multi_agent_cli.py  test_multi_agent_modular.py  (+16 more)
web-dashboard/: .eslintrc.json  .gitignore  .prettierrc  README.md  build.js  jest.config.js  package-lock.json  package.json  tailwind.config.js
(+638 files in other folders)
